--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: rust:nightly
+    runs-on: rustlang/rust:nightly
 
     steps:
     - uses: actions/checkout@v1
