--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,10 +5,12 @@ on: [push]
 jobs:
   build:
 
-    runs-on: rustlang/rust:nightly
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v1
+    - name: Rust Update
+       run: rustup default nightly
     - name: Build
       run: cargo build --verbose
     - name: Run tests
